--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Feb 16 10:36:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/internal.h, qemud/qemud.c, libvirt.spec.in: Remove
+	mistaken references to gnutls.
+
 Thu Feb 15 19:07:24 IST 2007 Mark McLoughlin <markmc@redhat.com>
 
 	* qemud/conf.c: fix <interface type='network'> output
