--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Feb 16 11:03:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/driver.h, src/proxy_internal.c, src/qemu_internal.c,
+	src/test.c, src/xen_internal.c, src/xend_internal.c,
+	src/xm_internal.c, src/xs_internal.c: Remove the unused
+	'init' method from the internal driver API (from Rich Jones)
+
 Fri Feb 16 10:36:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/internal.h, qemud/qemud.c, libvirt.spec.in: Remove
