--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 16 11:56:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* tests/Makefile.am: Fixed linkage of test suites
+
 Fri Feb 16 11:03:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/driver.h, src/proxy_internal.c, src/qemu_internal.c,
