Fixed data type casts to address endianness issues on ia64

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Feb 19 09:38:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/bridge.c, qemud/conf.c: Fixed int -> char casts to deal
+	with endianness / alignment issues on IA64 platforms. Patch 
+	from Atsushi SAKAI <sakaia@jp.fujitsu.com>
+
 Fri Feb 16 18:28:32 IST 2007 Mark McLoughlin <markmc@redhat.com>
 
 	* qemud/qemud.c, qemud/dispatch.c, qemud/internal.h
