Fixed virsh command line arg handling for -t option

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ Patches have also been contributed by:
   Richard W.M. Jones   <rjones@redhat.com>
   Atsushi SAKAI        <sakaia@jp.fujitsu.com>
   Kazuki Mizushima     <mizushima.kazuk@jp.fujitsu.com>
+  Saori Fukuta         <fukuta.saori@jp.fujitsu.com>
 
   [....send patches to get your name here....]
 
