--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb 27 10:25:35 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/virsh.c: Fix command line argument parsing to make
+	the '-t' argument work. Signed-off-by: Saori Fukuta
+
 Tue Feb 27 10:20:43 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/xend_internal.c: Only hardcode port = 5900+domid if
