--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb 27 10:35:35 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/virsh.c: Fix SEGV when doing tab-completion of commands
+	which have no arguments (eg, nodeinfo<TAB>).
+
 Tue Feb 27 10:25:35 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/virsh.c: Fix command line argument parsing to make
