--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb 27 10:49:35 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xend_internal.c: Check POST reply for 'Cannot' to detect
+	failure of core dump on Domain-0. Signed-off-by: Kazuki Mizushima
+
 Tue Feb 27 10:35:35 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/virsh.c: Fix SEGV when doing tab-completion of commands
