Optimize lookup-by-UUID for new XenD

--- a/AUTHORS
+++ b/AUTHORS
@@ -29,6 +29,7 @@ Patches have also been contributed by:
   Atsushi SAKAI        <sakaia@jp.fujitsu.com>
   Kazuki Mizushima     <mizushima.kazuk@jp.fujitsu.com>
   Saori Fukuta         <fukuta.saori@jp.fujitsu.com>
+  Tatsuro Enokura      <fj7716hz@aa.jp.fujitsu.com>
 
   [....send patches to get your name here....]
 
