--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 06 11:47:12 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemud.c: Unlink read-only socket upon startup (patch
+	from Rich Jones)
+
 Mon Mar 05 12:19:42 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_internal.c: Remove bogus ATTRIBUTE_UNUSED annotation
