Added  Nobuhiro Itou and Masayuki Sunou  to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -31,6 +31,8 @@ Patches have also been contributed by:
   Saori Fukuta         <fukuta.saori@jp.fujitsu.com>
   Tatsuro Enokura      <fj7716hz@aa.jp.fujitsu.com>
   Takahashi Tomohiro   <takatom@jp.fujitsu.com>
+  Nobuhiro Itou        <fj0873gn@aa.jp.fujitsu.com>
+  Masayuki Sunou       <fj1826dm@aa.jp.fujitsu.com>
 
   [....send patches to get your name here....]
 
