--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Mar  8 16:30:41 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* libvirt.spec.in: Add some macro magic to allow Release field
+	to incorporate an automated build number for testing - a no-op
+	for normal RPM builds.
+
 Thu Mar  8 10:14:24 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_internal.c: Fix inverted check on file handle to
