--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Mar  9 10:41:11 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* python/generator.py, python/libvir.c, python/libvirt_wrap.h,
+	python/libvirt-python-api.xml, python/types.c: Added new bindings
+	for all the virNetwork related APIs
+
 Fri Mar  9 14:43:11 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* src/virsh.c: bad pointer/int mismatch fixes from Richard Jones
