--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Mar 15 13:20:20 EST 2007 Daniel P Berrange <berrange@redhat.com>
+
+	* libvirt.spec.in: Don't include default network XML in /etc
+	filelist. Instead only install it froma %post script. This
+	ensure that if an admin deletes the default network it doesn't
+	get recreated upon RPM updates.
+
 Thu Mar 15 18:20:03 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* include/libvirt/libvirt.h[.in] include/libvirt/virterror.h
