--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 15 14:14:20 EST 2007 Daniel P Berrange <berrange@redhat.com>
+
+	* src/xen_internal.c: Fix missing NULL initializer
+
 Thu Mar 15 13:20:20 EST 2007 Daniel P Berrange <berrange@redhat.com>
 
 	* libvirt.spec.in: Don't include default network XML in /etc
