--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 16 15:55:01 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c tests/sexpr2xmltest.c tests/xmconfigtest.c: avoid
+	  warnings when compiling without Xen
+
 Fri Mar 16 11:43:08 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* python/generator.py: patch from Tatsuro Enokura to fix 
