--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Mar 16 19:32:01 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* docs/*: updated the format section, augmented Networking with
+	  description provided by Daniel Berrange
+	* po/*: regenerated
+
 Fri Mar 16 16:01:54 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* qemud/conf.c qemud/driver.h qemud/internal.h src/internal.h
